<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".Main2Activity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:background="@android:color/darker_gray">

        <Button
            android:id="@+id/next"
            android:layout_width="138dp"
            android:layout_height="70dp"

            android:layout_alignParentBottom="true"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="28dp"
            android:layout_toStartOf="@+id/add"
            android:layout_toLeftOf="@+id/add"
            android:background="@android:color/holo_red_light"
            android:text=" clear all"
            android:textAlignment="center"
            android:textColor="@android:color/background_dark"
            android:textSize="7pt"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="90dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="327dp"
                android:layout_height="53dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="36dp"
                android:layout_marginLeft="36dp"
                android:layout_marginTop="9dp"
                android:layout_marginEnd="48dp"
                android:layout_marginRight="48dp"
                android:background="@android:color/holo_orange_dark"
                android:text="My Cart"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="11pt"
                android:textStyle="bold" />
        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="385dp"
            android:layout_height="121dp"

            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="14dp"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="109dp"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="12dp"
            app:cardBackgroundColor="@color/colorAccent">

            <LinearLayout
                android:layout_width="355dp"
                android:layout_height="103dp"
                android:layout_margin="9dp"
                android:background="@color/colorAccent"
                android:orientation="horizontal">


                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="120dp"
                    android:contentDescription="TODO" />

                <LinearLayout
                    android:layout_width="162dp"
                    android:layout_height="103dp"
                    android:layout_margin="8dp"
                    android:background="@color/colorAccent"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pizza"
                        android:textColor="@android:color/black"
                        android:textSize="15pt"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/m"
                        android:textColor="@android:color/black"
                        android:textSize="6pt"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rs_1500"
                        android:textColor="@android:color/black"
                        android:textSize="10pt"
                        android:textStyle="bold" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="116dp">

                    <Button
                        android:layout_width="82dp"
                        android:layout_height="97dp"
                        android:background="@android:color/holo_green_light"
                        android:padding="15dp"
                        android:text="@string/update"
                        android:textAlignment="center"
                        android:textColor="@color/design_default_color_primary_dark"
                        android:textSize="8pt"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/add"
            android:layout_width="140dp"
            android:layout_height="70dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="126dp"

            android:layout_marginRight="126dp"
            android:layout_marginBottom="25dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/more_shopping"
            android:textAlignment="center"
            android:textColor="@android:color/background_dark"
            android:textSize="7pt"
            android:textStyle="bold" />

        <Button
            android:id="@+id/order"
            android:layout_width="120dp"
            android:layout_height="71dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginBottom="23dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/total_price"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="7pt"
            android:textStyle="bold" />
    </RelativeLayout>





</LinearLayout>